--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache: pip
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
-  - pip install pytest>=3.6.0
+  - pip install pytest --upgrade
   - pip install pytest-dependency pytest-mock requests-mock pytest>=3.6.0 pytest-cov==2.4.0 python-coveralls
   - cd .. && git clone https://github.com/thu-coai/cotk.git && pip install ./cotk --progress-bar off && cd CVAE-tensorflow
 
